--- a/README.Rmd
+++ b/README.Rmd
@@ -17,15 +17,23 @@ knitr::opts_chunk$set(
 
 # PCMBaseCpp
 
-The goal of PCMBaseCpp is to provide fast C++ backend for the [PCMBase](https://venelin.github.io/PCMBase) R-package.
+The goal of PCMBaseCpp is to provide fast C++ backend for the [PCMBase](https://venelin.github.io/PCMBase) R-package. 
 
 ## Installation
 
-You can install the released version of PCMBaseCpp from [CRAN](https://CRAN.R-project.org) with:
+The package needs a C++ 11 compiler and Rcpp to be installed in you R-environment. Once this is done, you can install the package from github:
 
-``` r
+```{r, eval=FALSE}
+devtools::install_github("venelin/PCMBaseCpp")
+```
+
+<!--
+You can install the github version of PCMBaseCpp: from [CRAN](https://CRAN.R-project.org) with:
+
+```{r, eval = FALSE}
 install.packages("PCMBaseCpp")
 ```
+-->
 
 ## Example
 
