--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 [![Travis build status](https://travis-ci.org/venelin/PCMBaseCpp.svg?branch=master)](https://travis-ci.org/venelin/PCMBaseCpp)
 [![Coverage status](https://codecov.io/gh/venelin/PCMBaseCpp/branch/master/graph/badge.svg)](https://codecov.io/github/venelin/PCMBaseCpp?branch=master)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/PCMBaseCpp?color=blue)](http://cran.rstudio.com/package=PCMBaseCpp)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/PCMBaseCpp?color=blue)](https://cran.r-project.org/package=PCMBaseCpp)
 [![Downloads](http://cranlogs.r-pkg.org/badges/PCMBaseCpp?color=blue)](http://cran.rstudio.com/package=PCMBaseCpp)
 
 
@@ -194,7 +194,7 @@ The PCMBaseCpp R-package uses the following R-packages and C++ libraries:
 
 * For tree processing in C++: The [SPLITT library](https://venelin.github.io/SPLITT) [@Mitov:2018dqa];
 * For data processing in R: `r printPackages(dataProcessing)`;
-* For algebraic manipulation: The [Armadillo C++ template library](http://http://arma.sourceforge.net/) [@Sanderson:2016cs] and its port to R `r printPackages(maths)`;
+* For algebraic manipulation: The [Armadillo C++ template library](http://arma.sourceforge.net/) [@Sanderson:2016cs] and its port to R `r printPackages(maths)`;
 * For unit-testing: `r printPackages(testing)`;
 * For documentation and web-site generation: `r printPackages(docs)`;
 
