Updated web-site (problems encountered when executing BenchmarkRvsCpp: possible time-out when calling rmarkdown::render, hence, the snippet is not executed and the results are pasted as comments.).

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,8 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
+library(PCMBase)
+library(PCMBaseCpp)
 ```
 
 [![Travis build status](https://travis-ci.org/venelin/PCMBaseCpp.svg?branch=master)](https://travis-ci.org/venelin/PCMBaseCpp)
@@ -37,16 +39,31 @@ If you experience problems installing the package from github, you may try insta
 ```{r, eval = FALSE}
 install.packages("PCMBaseCpp")
 ```
-
 Once the package is installed, use the function `BenchmarkRvsCpp` to evaluate the gain in speed of the likelihood calculation on your machine, relative to the R implementation:
 
-```{r}
+```{r, echo=TRUE, eval=FALSE}
 library(PCMBaseCpp)
+library(data.table)
 options(digits = 4)
 
 # Depending on your use case, you can change the number of traits, as well as the 
 # other arguments:
 benchRes <- BenchmarkRvsCpp(ks = 2, includeParallelMode = FALSE, verbose = TRUE)
+# Example output:
+# Performing benchmark for k:  2 ; optionSet:  serial / 1D-multiv. ...
+#     k  modelType     N  R mode     logLik  logLikCpp  timeR timeCpp
+#  1: 2 MGPM (A-F)    10  2   11 -7.416e+02 -7.416e+02  0.010  0.0007
+#  2: 2 MGPM (A-F)   100  4   11 -4.294e+03 -4.294e+03  0.107  0.0016
+#  3: 2 MGPM (A-F)  1000 11   11 -1.700e+05 -1.700e+05  1.221  0.0095
+#  4: 2 MGPM (A-F) 10000 11   11 -1.210e+06 -1.210e+06 12.443  0.0795
+#  5: 2     BM (B)    10  2   11 -4.451e+03 -4.451e+03  0.010  0.0003
+#  6: 2     BM (B)   100  4   11 -8.427e+03 -8.427e+03  0.082  0.0008
+#  7: 2     BM (B)  1000 11   11 -1.830e+04 -1.830e+04  0.847  0.0064
+#  8: 2     BM (B) 10000 11   11 -6.574e+05 -6.574e+05  8.414  0.0663
+#  9: 2     OU (E)    10  2   11 -1.126e+04 -1.126e+04  0.016  0.0006
+# 10: 2     OU (E)   100  4   11 -8.486e+05 -8.486e+05  0.147  0.0015
+# 11: 2     OU (E)  1000 11   11 -1.234e+06 -1.234e+06  1.505  0.0096
+# 12: 2     OU (E) 10000 11   11 -1.058e+07 -1.058e+07 15.062  0.0854
 ```
 
 # How to use the package?
@@ -87,6 +104,7 @@ logLikFunCpp <- PCMCreateLikelihood(
   model = PCMBaseTestObjects$model_MixedGaussian_ab, 
   metaI = PCMInfoCpp)
 
+set.seed(1, kind = "Mersenne-Twister", normal.kind = "Inversion")
 randParam <- PCMParamRandomVecParams(PCMBaseTestObjects$model_MixedGaussian_ab)
 
 system.time(llR <- logLikFunR(randParam))
@@ -205,3 +223,4 @@ Copyright 2016-2019 Venelin Mitov
 Source code to PCMBaseCpp is made available under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. PCMBaseCpp is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 # References
+
