--- a/README.Rmd
+++ b/README.Rmd
@@ -104,6 +104,17 @@ logLikFunCpp <- PCMCreateLikelihood(
   model = PCMBaseTestObjects$model_MixedGaussian_ab, 
   metaI = PCMInfoCpp)
 
+metaICpp <- PCMInfoCpp(
+  X = PCMBaseTestObjects$traits.ab.123, 
+  tree = PCMBaseTestObjects$tree.ab,
+  model = PCMBaseTestObjects$model_MixedGaussian_ab)
+
+logLikFunCpp2 <- PCMCreateLikelihood(
+  X = PCMBaseTestObjects$traits.ab.123, 
+  tree = PCMBaseTestObjects$tree.ab,
+  model = PCMBaseTestObjects$model_MixedGaussian_ab, 
+  metaI = metaICpp)
+
 set.seed(1, kind = "Mersenne-Twister", normal.kind = "Inversion")
 randParam <- PCMParamRandomVecParams(PCMBaseTestObjects$model_MixedGaussian_ab)
 
@@ -111,8 +122,11 @@ system.time(llR <- logLikFunR(randParam))
 
 system.time(llCpp <- logLikFunCpp(randParam))
 
+system.time(llCpp2 <- logLikFunCpp2(randParam))
+
 print(llR)
 print(llCpp)
+print(llCpp2)
 ```
 
 ## Passing the meta-information object returned by `PCMInfoCpp` as a `metaI` argument of `PCMLik` and `PCMCreateLikelihood`
