--- a/vignettes/REFERENCES-R.bib
+++ b/vignettes/REFERENCES-R.bib
@@ -1,50 +1,110 @@
+@Manual{R-Rcpp,
+  title = {Rcpp: Seamless R and C++ Integration},
+  author = {Dirk Eddelbuettel and Romain Francois and JJ Allaire and Kevin Ushey and Qiang Kou and Nathan Russell and Inaki Ucar and Douglas Bates and John Chambers},
+  year = {2023},
+  note = {R package version 1.0.11},
+  url = {https://CRAN.R-project.org/package=Rcpp},
+}
+
+@Manual{R-RcppArmadillo,
+  title = {RcppArmadillo: Rcpp Integration for the Armadillo Templated Linear Algebra
+Library},
+  author = {Dirk Eddelbuettel and Romain Francois and Doug Bates and Binxiang Ni and Conrad Sanderson},
+  year = {2023},
+  note = {R package version 0.12.6.1.0},
+  url = {https://CRAN.R-project.org/package=RcppArmadillo},
+}
+
 @Manual{R-covr,
   title = {covr: Test Coverage for Packages},
   author = {Jim Hester},
-  year = {2018},
-  note = {R package version 3.2.1},
+  year = {2023},
+  note = {R package version 3.6.2},
   url = {https://CRAN.R-project.org/package=covr},
 }
+
 @Manual{R-data.table,
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
-  year = {2019},
-  note = {R package version 1.12.8},
+  year = {2023},
+  note = {R package version 1.14.8},
   url = {https://CRAN.R-project.org/package=data.table},
 }
+
 @Manual{R-pkgdown,
   title = {pkgdown: Make Static HTML Documentation for a Package},
-  author = {Hadley Wickham and Jay Hesselberth},
-  year = {2018},
-  note = {R package version 1.3.0},
+  author = {Hadley Wickham and Jay Hesselberth and Maëlle Salmon},
+  year = {2022},
+  note = {R package version 2.0.7},
   url = {https://CRAN.R-project.org/package=pkgdown},
 }
-@Manual{R-Rcpp,
-  title = {Rcpp: Seamless R and C++ Integration},
-  author = {Dirk Eddelbuettel and Romain Francois and JJ Allaire and Kevin Ushey and Qiang Kou and Nathan Russell and Douglas Bates and John Chambers},
-  year = {2019},
-  note = {R package version 1.0.3},
-  url = {https://CRAN.R-project.org/package=Rcpp},
-}
-@Manual{R-RcppArmadillo,
-  title = {RcppArmadillo: 'Rcpp' Integration for the 'Armadillo' Templated Linear Algebra
-Library},
-  author = {Dirk Eddelbuettel and Romain Francois and Doug Bates and Binxiang Ni},
-  year = {2019},
-  note = {R package version 0.9.700.2.0},
-  url = {https://CRAN.R-project.org/package=RcppArmadillo},
-}
+
 @Manual{R-roxygen2,
   title = {roxygen2: In-Line Documentation for R},
-  author = {Hadley Wickham and Peter Danenberg and Manuel Eugster},
-  year = {2018},
-  note = {R package version 6.1.1},
+  author = {Hadley Wickham and Peter Danenberg and Gábor Csárdi and Manuel Eugster},
+  year = {2022},
+  note = {R package version 7.2.3},
   url = {https://CRAN.R-project.org/package=roxygen2},
 }
+
 @Manual{R-testthat,
   title = {testthat: Unit Testing for R},
   author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 2.1.1},
+  year = {2023},
+  note = {R package version 3.1.10},
   url = {https://CRAN.R-project.org/package=testthat},
 }
+
+@Article{Rcpp2011,
+  title = {{Rcpp}: Seamless {R} and {C++} Integration},
+  author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {8},
+  pages = {1--18},
+  doi = {10.18637/jss.v040.i08},
+}
+
+@Book{Rcpp2013,
+  title = {Seamless {R} and {C++} Integration with {Rcpp}},
+  author = {Dirk Eddelbuettel},
+  publisher = {Springer},
+  address = {New York},
+  year = {2013},
+  note = {ISBN 978-1-4614-6867-7},
+  doi = {10.1007/978-1-4614-6868-4},
+}
+
+@Article{Rcpp2018,
+  title = {{Extending {R} with {C++}: A Brief Introduction to {Rcpp}}},
+  author = {Dirk Eddelbuettel and James Joseph Balamuta},
+  journal = {The American Statistician},
+  year = {2018},
+  volume = {72},
+  number = {1},
+  pages = {28-36},
+  doi = {10.1080/00031305.2017.1375990},
+}
+
+@Article{RcppArmadillo2014,
+  title = {RcppArmadillo: Accelerating R with high-performance C++ linear algebra},
+  author = {Dirk Eddelbuettel and Conrad Sanderson},
+  journal = {Computational Statistics and Data Analysis},
+  year = {2014},
+  volume = {71},
+  month = {March},
+  pages = {1054--1063},
+  doi = {10.1016/j.csda.2013.02.005},
+}
+
+@Article{testthat2011,
+  author = {Hadley Wickham},
+  title = {testthat: Get Started with Testing},
+  journal = {The R Journal},
+  year = {2011},
+  volume = {3},
+  pages = {5--10},
+  url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
+}
+
