--- a/vignettes/REFERENCES-R.bib
+++ b/vignettes/REFERENCES-R.bib
@@ -1,58 +1,58 @@
+@Manual{R-covr,
+  title = {covr: Test Coverage for Packages},
+  author = {Jim Hester},
+  year = {2023},
+  note = {R package version 3.6.4},
+  url = {https://covr.r-lib.org},
+}
+
+@Manual{R-data.table,
+  title = {data.table: Extension of `data.frame`},
+  author = {Tyson Barrett and Matt Dowle and Arun Srinivasan and Jan Gorecki and Michael Chirico and Toby Hocking and Benjamin Schwendinger and Ivan Krylov},
+  year = {2025},
+  note = {R package version 1.17.8},
+  url = {https://r-datatable.com},
+}
+
+@Manual{R-pkgdown,
+  title = {pkgdown: Make Static HTML Documentation for a Package},
+  author = {Hadley Wickham and Jay Hesselberth and Maëlle Salmon and Olivier Roy and Salim Brüggemann},
+  year = {2025},
+  note = {R package version 2.1.3},
+  url = {https://pkgdown.r-lib.org/},
+}
+
 @Manual{R-Rcpp,
   title = {Rcpp: Seamless R and C++ Integration},
-  author = {Dirk Eddelbuettel and Romain Francois and JJ Allaire and Kevin Ushey and Qiang Kou and Nathan Russell and Inaki Ucar and Douglas Bates and John Chambers},
-  year = {2023},
-  note = {R package version 1.0.11},
-  url = {https://CRAN.R-project.org/package=Rcpp},
+  author = {Dirk Eddelbuettel and Romain Francois and JJ Allaire and Kevin Ushey and Qiang Kou and Nathan Russell and Iñaki Ucar and Doug Bates and John Chambers},
+  year = {2025},
+  note = {R package version 1.1.0},
+  url = {https://www.rcpp.org},
 }
 
 @Manual{R-RcppArmadillo,
   title = {RcppArmadillo: Rcpp Integration for the Armadillo Templated Linear Algebra
 Library},
   author = {Dirk Eddelbuettel and Romain Francois and Doug Bates and Binxiang Ni and Conrad Sanderson},
-  year = {2023},
-  note = {R package version 0.12.6.1.0},
-  url = {https://CRAN.R-project.org/package=RcppArmadillo},
-}
-
-@Manual{R-covr,
-  title = {covr: Test Coverage for Packages},
-  author = {Jim Hester},
-  year = {2023},
-  note = {R package version 3.6.2},
-  url = {https://CRAN.R-project.org/package=covr},
-}
-
-@Manual{R-data.table,
-  title = {data.table: Extension of `data.frame`},
-  author = {Matt Dowle and Arun Srinivasan},
-  year = {2023},
-  note = {R package version 1.14.8},
-  url = {https://CRAN.R-project.org/package=data.table},
-}
-
-@Manual{R-pkgdown,
-  title = {pkgdown: Make Static HTML Documentation for a Package},
-  author = {Hadley Wickham and Jay Hesselberth and Maëlle Salmon},
-  year = {2022},
-  note = {R package version 2.0.7},
-  url = {https://CRAN.R-project.org/package=pkgdown},
+  year = {2025},
+  note = {R package version 14.6.0-1},
+  url = {https://github.com/RcppCore/RcppArmadillo},
 }
 
 @Manual{R-roxygen2,
   title = {roxygen2: In-Line Documentation for R},
   author = {Hadley Wickham and Peter Danenberg and Gábor Csárdi and Manuel Eugster},
-  year = {2022},
-  note = {R package version 7.2.3},
-  url = {https://CRAN.R-project.org/package=roxygen2},
+  year = {2024},
+  note = {R package version 7.3.2},
+  url = {https://roxygen2.r-lib.org/},
 }
 
 @Manual{R-testthat,
   title = {testthat: Unit Testing for R},
   author = {Hadley Wickham},
-  year = {2023},
-  note = {R package version 3.1.10},
-  url = {https://CRAN.R-project.org/package=testthat},
+  year = {2025},
+  note = {R package version 3.2.3},
+  url = {https://testthat.r-lib.org},
 }
 
 @Article{Rcpp2011,
